; ModuleID = '/home/carl/AnghaBench/libgit2/tests/core/extr_buffer.c_test_core_buffer__3.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/core/extr_buffer.c_test_core_buffer__3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_BUF_INIT = common dso_local global i32 0, align 4
@test_4096 = common dso_local global i32 0, align 4
@test_8192 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_core_buffer__3() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @GIT_BUF_INIT, align 4
  store i32 %2, i32* %1, align 4
  %3 = load i32, i32* @test_4096, align 4
  %4 = call i32 @git_buf_set(i32* %1, i32 %3, i32 4096)
  %5 = call i64 @git_buf_oom(i32* %1)
  %6 = icmp eq i64 %5, 0
  %7 = zext i1 %6 to i32
  %8 = call i32 @cl_assert(i32 %7)
  %9 = load i32, i32* @test_4096, align 4
  %10 = call i32 @git_buf_cstr(i32* %1)
  %11 = call i32 @cl_assert_equal_s(i32 %9, i32 %10)
  %12 = load i32, i32* @test_4096, align 4
  %13 = call i32 @git_buf_puts(i32* %1, i32 %12)
  %14 = call i64 @git_buf_oom(i32* %1)
  %15 = icmp eq i64 %14, 0
  %16 = zext i1 %15 to i32
  %17 = call i32 @cl_assert(i32 %16)
  %18 = load i32, i32* @test_8192, align 4
  %19 = call i32 @git_buf_cstr(i32* %1)
  %20 = call i32 @cl_assert_equal_s(i32 %18, i32 %19)
  %21 = load i32, i32* @test_4096, align 4
  %22 = call i32 @git_buf_set(i32* %1, i32 %21, i32 4096)
  %23 = call i64 @git_buf_oom(i32* %1)
  %24 = icmp eq i64 %23, 0
  %25 = zext i1 %24 to i32
  %26 = call i32 @cl_assert(i32 %25)
  %27 = load i32, i32* @test_4096, align 4
  %28 = call i32 @git_buf_cstr(i32* %1)
  %29 = call i32 @cl_assert_equal_s(i32 %27, i32 %28)
  %30 = call i32 @git_buf_dispose(i32* %1)
  ret void
}

declare dso_local i32 @git_buf_set(i32*, i32, i32) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i64 @git_buf_oom(i32*) #1

declare dso_local i32 @cl_assert_equal_s(i32, i32) #1

declare dso_local i32 @git_buf_cstr(i32*) #1

declare dso_local i32 @git_buf_puts(i32*, i32) #1

declare dso_local i32 @git_buf_dispose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
